--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -15,19 +15,47 @@ body {
 
 ul {
     color:#ffe200;
+    width:100%;
+    padding:20px;
+    background-color:#121212;
+}
+
+ul li {
+    width: 100%;
+    padding:10px;
+    color:#ffe200;
+    text-decoration:none;
+    text-align: center;
+    transition: 0.07s;
+}
+ul li:hover {
+    color:#121212;
+    background-color:#ffe200;
+    font-style: italic;
+    box-shadow: 0px 0px 20px #ffe200;
+    
 }
 
 header {
     font-size: 24px;
-    color:#ffe200;
+    color:#1f1f1f;
+    width: 100%;
+    padding: 20px;
+    background-color:#ffe200;
 }
+
 div#container {
-    width:1200px;
-    height:800px;
+    width:100%;
     background-color:#191919;
-    font-family: 
 }
 
 h1 {
-    
+    font-family: consolas;    
+}
+
+h3 {
+    width: 100%;
+    margin:20px;
+    padding 20px;
+    color:#ffe200
 }
