--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -14,26 +14,44 @@ body {
 }
 
 ul {
-    color:#ffe200;
+    color:#ffb100;
     width:100%;
     padding:20px;
     background-color:#121212;
 }
 
 ul li {
-    width: 100%;
-    padding:10px;
-    color:#ffe200;
+    color:#ffb100;
     text-decoration:none;
     text-align: center;
     transition: 0.07s;
+    display:block;
+    margin: auto;
+    list-style:none;
 }
-ul li:hover {
-    color:#121212;
-    background-color:#ffe200;
-    font-style: italic;
-    box-shadow: 0px 0px 20px #ffe200;
-    
+
+nav ul li a{
+    float: left;
+    display:block;
+    padding: 5px 15px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-right: 1px, solid #FFFFFF;
+    color: #00ff00;
+    text-decoration: none;
+    transition: 0.2s;
+    width: 50px;
+
+}
+
+nav ul li a:hover {
+    box-shadow: 0px 0px 25px #ffb100;
+    background-color: #ffb100;
+    width:100px;
+}
+
+div.keepOpen {
+    clear: both;
 }
 
 header {
@@ -41,7 +59,7 @@ header {
     color:#1f1f1f;
     width: 100%;
     padding: 20px;
-    background-color:#ffe200;
+    background-color:#ffb100;
 }
 
 div#container {
@@ -50,12 +68,23 @@ div#container {
 }
 
 h1 {
-    font-family: consolas;    
+    font-family: consolas;
 }
 
 h3 {
     width: 100%;
     margin:20px;
     padding 20px;
-    color:#ffe200
+    color:#ffb100
+}
+
+@media screen and (max-width: 600px) {
+    div#container{
+        width: 100%;
+    }
+    nav ul li a{
+        width: 100px;
+        float: none;
+        text-align: center;
+    }
 }
