--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -10,7 +10,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, ul, li, header, footer, nav {
 /* universal style */
 
 body {
-    background-color:#888888;
+    background-color:#191919;
 }
 
 ul {
@@ -37,17 +37,20 @@ nav ul li a{
     margin-left: 100px;
     margin-right: 100px;
     border-right: 1px, solid #FFFFFF;
-    color: #00ff00;
+    color: #ceffff;
     text-decoration: none;
-    transition: 0.2s;
-    width: 50px;
+    transition: 0.1s;
+    width: 100%px;
+    font-family: "Montserrat SemiBold";
+    text-shadow: 0px 0px 10px #0014ff;
 
 }
 
 nav ul li a:hover {
-    box-shadow: 0px 0px 25px #ffb100;
-    background-color: #ffb100;
-    width:100px;
+    box-shadow: 0px 0px 25px #0014ff;
+    background-color: #ceffff;
+    color: #0076ff;
+    text-shadow: 0px 0px 0px #FFFFFF;
 }
 
 div.keepOpen {
@@ -56,10 +59,10 @@ div.keepOpen {
 
 header {
     font-size: 24px;
-    color:#1f1f1f;
+    color:#ceffff;
     width: 100%;
     padding: 20px;
-    background-color:#ffb100;
+    background-color:#363636;
 }
 
 div#container {
@@ -68,14 +71,16 @@ div#container {
 }
 
 h1 {
-    font-family: consolas;
+    font-family: "Montserrat SemiBold";
 }
 
 h3 {
     width: 100%;
     margin:20px;
     padding 20px;
-    color:#ffb100
+    font-family: "Montserrat SemiBold";
+    color:#ceffff;
+    font-size: 30px;
 }
 
 @media screen and (max-width: 600px) {
