--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -46,6 +46,30 @@ nav ul li a{
 
 }
 
+nav ul li#back a{
+    float: none;
+    color:red;
+    background-color:#400000;
+}
+
+nav ul li#here a {
+    color: greenyellow;
+}
+
+nav ul li#here a:hover{
+    color:green;
+    background-color:greenyellow;
+}
+
+nav ul li#secret a{
+    color:#191919;
+    background-color:#191919;
+    float:none;
+}
+nav ul li#secret a:hover{
+    color:#282828;
+}
+
 nav ul li a:hover {
     box-shadow: 0px 0px 25px #0014ff;
     background-color: #ceffff;
@@ -57,14 +81,20 @@ div.keepOpen {
     clear: both;
 }
 
-img{
+nav img{
     transition:0.4s;
     width: 200px;
+    height:200px;
+    border-style: inset;
+    border-width: 10px;
+    border-color: red;
     
 }
 
 img:hover{
     width: 400px;
+    height:400px;
+    border-color:white;
 }
 
 header {
@@ -75,6 +105,10 @@ header {
     background-color:#363636;
 }
 
+div#content{
+    align-content:center;
+}
+
 div#container {
     width:100%;
     background-color:#191919;
@@ -82,6 +116,14 @@ div#container {
 
 h1 {
     font-family: "Montserrat SemiBold";
+}
+
+h1#main{
+    font-family: "Consolas";
+    color:white;
+    margin-top: 20px;
+    margin-left: 20px;
+    
 }
 
 h3 {
@@ -97,7 +139,7 @@ p{
     color:white;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
     div#container{
         width: 100%;
     }
